syntax = "proto3";

package sysclient;

option go_package = "./sys";

// user start
// 用户登录
message LoginRequest {
    string Username = 1;
    string Password = 2;
    string Code = 3;
    string Uuid = 4;
}
message LoginResponse {
    string CurrentAuthority = 1;
    int64 Expire = 2;
    string Token = 3;
}

// 用户信息
message UserInfoRequest {
    int64 userId = 1;
}
message UserInfoResponse {
    repeated string roles = 1;
    repeated string permissions = 2;
    repeated string buttons = 3;
    string introduction = 4;
    string avatar = 5;
    string userName = 6;
    string name = 7;
    int64 userId = 8;
    int64 deptId = 9;
    int64 code = 10;
}
// user end

// sys-config start
message SysConfigReq {
}

message SysConfigResp {
    string sys_app_logo = 1;
    string sys_app_name = 2;
}
// sys-config end

// menu start
message MenuAddReq {
    string menu_name = 1;
    string title = 2;
    string icon = 3;
    string path = 4;
    string paths = 5;
    string menu_type = 6;
    string action = 7;
    string permission = 8;
    string breadcrumb =9;
    string component =10;
    string visible =11;
    string is_frame =12;
    int64 parent_id = 13;
    int64 no_cache = 14;
    int64 sort = 15;
    string create_by =16;
    string update_by =17;
}

message MenuAddResp {
    string pong = 1;
}

message MenuListReq {
    string menu_name = 1;
    string path = 2;
}

message MenuListData {
    string menu_name = 1;
    string title = 2;
    string icon = 3;
    string path = 4;
    string paths = 5;
    string menu_type = 6;
    string action = 7;
    string permission = 8;
    string breadcrumb =9;
    string component =10;
    string visible =11;
    string is_frame =12;
    int64 parent_id = 13;
    int64 no_cache = 14;
    int64 sort = 15;
    string create_by =16;
    string update_by =17;
}


message MenuListResp{
    int64 total = 1;
    repeated  MenuListData list = 2;
}
message MenuUpdateReq {
    string menu_name = 1;
    string title = 2;
    string icon = 3;
    string path = 4;
    string paths = 5;
    string menu_type = 6;
    string action = 7;
    string permission = 8;
    string breadcrumb =9;
    string component =10;
    string visible =11;
    string is_frame =12;
    int64 parent_id = 13;
    int64 no_cache = 14;
    int64 sort = 15;
    string create_by =16;
    string update_by =17;
    int64 menu_id =18;
}

message MenuUpdateResp {
    string pong = 1;
}

message MenuDeleteReq {
    int64 menu_id = 1;
}

message MenuDeleteResp {
    string pong = 1;
}
// menu end

service Sys {
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc UserInfo(UserInfoRequest) returns(UserInfoResponse);

    rpc SysConfig(SysConfigReq) returns(SysConfigResp);

    rpc MenuAdd(MenuAddReq) returns(MenuAddResp);
    rpc MenuList(MenuListReq) returns(MenuListResp);
    rpc MenuUpdate(MenuUpdateReq) returns(MenuUpdateResp);
    rpc MenuDelete(MenuDeleteReq) returns(MenuDeleteResp);
}